# ComfyUI_FL-Trainer

./: .gitignore  FL_ImageCaptionSaver.py  FL_KohyaSSAdvConfig.py  FL_KohyaSSDatasetConfig.py  FL_KohyaSSInitWorkspace.py  FL_KohyaSSTrain.py  FL_Kohya_EasyTrain.py  FL_LoadImagesFromDirectoryPath.py  FL_train_core.py  FL_train_utils.py  README.md  __init__.py  hook_kohya_ss_run.py  hook_kohya_ss_utils.py  pyproject.toml
WIP/: FL_SliderLoraAdvConfig.py.WIP  FL_SliderLoraCore.py.WIP  FL_SliderLoraDatasetConfig.py.WIP  FL_SliderLoraInitWorkspace.py.WIP  FL_SliderLoraTrain.py.WIP
configs/kohya_ss_lora/: lora_sd1_5.json  lora_sdxl.json
configs/models_config/clip-vit-large-patch14/: tokenizer_config.json
configs/models_config/stable-diffusion-v1-5/: README.md  model_index.json
configs/models_config/stable-diffusion-v1-5/feature_extractor/: preprocessor_config.json
configs/models_config/stable-diffusion-v1-5/safety_checker/: config.json
configs/models_config/stable-diffusion-v1-5/scheduler/: scheduler_config.json
configs/models_config/stable-diffusion-v1-5/text_encoder/: config.json
configs/models_config/stable-diffusion-v1-5/unet/: config.json
configs/models_config/stable-diffusion-v1-5/vae/: config.json
configs/models_config/stable-diffusion-xl/: sd_xl_base.yaml
configs/models_config/stable-diffusion-xl-base-1.0/: LICENSE.md  README.md  model_index.json
configs/models_config/stable-diffusion-xl-base-1.0/scheduler/: scheduler_config.json
configs/models_config/stable-diffusion-xl-base-1.0/unet/: config.json  (+1 more)
example/: Example.json
web/: FL_Trainer.js
(+11 files in other folders)
